# wolf

./: .gitignore  README.md
ast/: Cargo.toml
ast/src/: lib.rs
design/: 01-data.md  01-project-structure.md  02-data.md  02-expressions.md  03-blocks.md  03-expressions.md  04-identifiers.md  04-strings.md  05-composition.md  05-functions.md  05-identifiers.md  05-structs.md  06-blocks.md  06-structs.md  07-members.md  09-namespaces.md  10-strings.md  11-functions.md
docs/: CNAME  _config.yml  index.md
docs/00-design/: 00-formatting.md  01-names.md  02-numbers.md  02-strings.md  03-bools.md  03-tuples.md  04-operations.md  04-strings.md  05-tuples.md  06-lets.md  06-operations.md  07-captures.md  07-chains.md  08-functions.md  08-lets.md  09-captures.md  09-rewrites.md  10-functions.md  10-types.md  11-conditions.md  (+32 more)
wf/: Cargo.toml  PARSER.ebnf  TOKENS.ebnf  wf.code-workspace
wf-vscode/: CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  vsc-extension-quickstart.md
wf/ast/src/: capture.rs  evaluatable.rs  lib.rs  literal.rs
wf/lookahead/: Cargo.toml
wf/lookahead/src/: lib.rs
wf/main/: Cargo.toml
wf/main/src/: main.rs
wf/parse/: Cargo.toml
wf/parse/src/: explain.rs  lib.rs
wf/test-files/: hello.wf
wf/test-files/parser/: baby_steps.wf  linewise.wf
wf/test-files/tokeniser/: arithmetic.test  arithmetic.wf  catching.test  chains.test  chains.wf  hello.test  hello.txt  interplay.test  interplay.wf  springs.test  springs.wf  tuples.test  tuples.wf
wf/token/: Cargo.toml
wf/token/src/: byte.rs  lib.rs
(+62 files in other folders)
