[workspace]
resolver = "3"
members = [
	"main",
    "token",
	"parse"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
wf-token = { path = "./token" }
wf-parse = { path = "./parse" }
clap = { version = "4", features = ["derive"]}
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"