[workspace]
resolver = "3"
members = [
	"main",
	"lookahead",
    "token",
	"parse"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
wf-lookahead = { path = "./lookahead" }
wf-token = { path = "./token" }
wf-parse = { path = "./parse" }
clap = { version = "4", features = ["derive"]}
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"